# WeaviateDemo

./: .gitignore  chats_202503241644.csv  df.py  docker-compose.yml  main.py  pyproject.toml  sentence.py  sentence_main.py
